--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -14,12 +14,14 @@ body{
 }
 
 .calendar-p {
+    width: 80%;
+    margin: 0 auto;
     padding: 1rem;
 }
 
 .table td{
     padding: 0;
-    height: 5rem;
+    height: 8rem;
 }
 
 .justify-content-center {
@@ -33,13 +35,6 @@ body{
 .label-w-1 {
     width: 10%;
     padding: 1%;
-}
-
-@media (max-width: 768px) {
-    .label-w-1 {
-        width: 30%;
-        padding: 1%;
-    }
 }
 
 .bg-secondary a{
@@ -127,21 +122,7 @@ body{
     width: 413px;
     height: 236px;
 }
-  
-@media (max-width: 485px){
-    .event-text {
-      width: 288px;
-      height: 236px;
-    }
-}
-  
-  
-@media (max-width: 365px){
-    .event-text {
-        width: 250px;
-        height: 236px;
-    }
-}
+
 
 @media (max-width: 280px){
     .event-text {
@@ -152,15 +133,49 @@ body{
     }
 }
 
+
+
 @media (min-width: 300px){
     .prev:hover{
         color: red;
         font-size: 18px;
     }
-      
+    
+    .calendar-p {
+        width: 100%;
+    }    
+
     .next:hover{
         color: red;
         font-size: 18px;
+    }
+}
+
+@media (max-width: 300px){
+    .calendar-p {
+        width: 100%;
+        padding: 0; 
+    }  
+}
+
+@media (max-width: 365px){
+    .event-text {
+        width: 250px;
+        height: 236px;
+    }
+}
+
+@media (max-width: 485px){
+    .event-text {
+      width: 288px;
+      height: 236px;
+    }
+}
+
+@media (max-width: 768px) {
+    .label-w-1 {
+        width: 30%;
+        padding: 1%;
     }
 }
 
