fix profile edit

--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -1,7 +1,7 @@
 /* 以下追加したスタイル */
 
 body{
-    bckground-color: #f7fff4 !important; 
+    background-color: #f7fff4 !important; 
 }
 
 .event_header{
@@ -136,6 +136,25 @@ body{
     height: 236px;
 }
 
+// プロフィールスタイル
+.profile{
+    display: flex;
+    justify-content: space-between;
+}
+
+.sidebar{
+    width: 200px;
+    height: auto;
+    background-color: white;
+}
+
+.profile-body {
+    width: 900px;
+}
+
+.posted-event-list{
+    display: none;
+}
 // レスポンシブ
 @media (max-width: 280px){
     .event-text {
@@ -189,6 +208,14 @@ body{
     .label-w-1 {
         width: 30%;
         padding: 1%;
+    }
+
+    .sidebar{
+        display: none;
+    }
+
+    .posted-event-list{
+        display: block;
     }
 }
 
